--- a/P2_FixAnAppDotNetCode/Views/Order/Index.cshtml
+++ b/P2_FixAnAppDotNetCode/Views/Order/Index.cshtml
@@ -8,9 +8,9 @@
     <div class="form-group">
         <label>@Localizer["Name"]*:</label><input asp-for="Name" class="form-control" />
     </div>
-    <h3>@Localizer["Adress"]</h3>
+    <h3>@Localizer["Address"]</h3>
     <div class="form-group">
-        <label>@Localizer["Location"]*:</label><input asp-for="Adress" class="form-control" />
+        <label>@Localizer["Location"]*:</label><input asp-for="Address" class="form-control" />
     </div>
     <div class="row">
         <div class="form-group col-4">
