--- a/P2_FixAnAppDotNetCode/Views/Shared/_Layout.cshtml
+++ b/P2_FixAnAppDotNetCode/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <div class="navbar navbar-inverse bg-primary" role="navigation">
         <div class="row">
             <a class="col navbar-brand" asp-action="Index" asp-controller="Product" style="padding-left:12%">
-                OpenClassrooms shop
+                OpenClassrooms Shop
             </a>
             <div class="col-4 text-right" style="padding-right:12%">
                 @await Component.InvokeAsync("CartSummary")
