--- a/P2_FixAnAppDotNetCode/Views/Cart/Index.cshtml
+++ b/P2_FixAnAppDotNetCode/Views/Cart/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model Cart
-
+@{ 
+    ViewData["Title"] = Localizer["YourCart"];
+}
 <h2>@Localizer["YourCart"]</h2>
 <table class="table table-bordered table-striped">
     <thead>
