added display check for checkout btn
Added a check that cart has items before displaying the checkout button

--- a/P2_FixAnAppDotNetCode/Views/Cart/Index.cshtml
+++ b/P2_FixAnAppDotNetCode/Views/Cart/Index.cshtml
@@ -51,5 +51,10 @@
 </table>
 <div class="text-center">
     <a class="btn btn-primary" asp-action="Index" asp-controller="Product">@Localizer["ContinueShopping"]</a>
-    <a class="btn btn-primary" asp-action="Index" asp-controller="Order">@Localizer["Checkout"]</a>
+
+    @if (Model.Lines.Any())
+    {
+        <a class="btn btn-primary" asp-action="Index" asp-controller="Order">@Localizer["Checkout"]</a>
+    }
+    
 </div>
